2010-04-29  Jakub Jelinek  <jakub@redhat.com>

	PR other/43620
	* configure.ac (AM_INIT_AUTOMAKE): Add no-dist option.
	* Makefile.in: Regenerated.

2010-04-29  Release Manager

	* GCC 4.4.4 released.

2010-03-15  David S. Miller  <davem@davemloft.net>

	* testsuite/libmudflap.c/pass54-frag.c: Add explicit return from
	main.

2010-01-21  Release Manager

	* GCC 4.4.3 released.

2010-01-09  Jakub Jelinek  <jakub@redhat.com>

	* mf-runtime.c (__mf_usage): Update copyright notice dates.

2009-10-15  Release Manager

	* GCC 4.4.2 released.

2009-07-22  Release Manager

	* GCC 4.4.1 released.

2009-04-21  Release Manager

	* GCC 4.4.0 released.

2009-04-09  Nick Clifton  <nickc@redhat.com>

	* mf-hooks1.c: Change copyright header to refer to version 3
	of the GNU General Public License with version 3.1 of the GCC
	Runtime Library Exception and to point readers at the COPYING3
	and COPYING3.RUNTIME files and the FSF's license web page.
	* mf-heuristics.c: Likewise.
	* mf-hooks2.c: Likewise.
	* mf-hooks3.c: Likewise.
	* mf-impl.h: Likewise.
	* mf-runtime.c: Likewise.
	* mf-runtime.h: Likewise.

2009-04-09  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/lib/mfdg.exp: Change copyright header to refer to
	version 3 of the GNU General Public License and to point readers
	at the COPYING3 file and the FSF's license web page.
	* testsuite/lib/libmudflap.exp: Likewise.

2009-03-31  Ben Elliston  <bje@au.ibm.com>

	PR libmudflap/38462
	* testsuite/libmudflap.c/fail27-frag.c: Match `mudflap dead
	object', not `mudflap object'.

2009-03-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure: Regenerate.

2009-02-03  Jakub Jelinek  <jakub@redhat.com>

	* mf-runtime.c (__mf_usage): Update copyright notice dates.

2009-01-23  Jie Zhang  <jie.zhang@analog.com>

	* mf-impl.h (__mf_get_state, __mf_set_state): Don't use
	__thread when TLS support is emulated.
	* mf-hooks3.c (__mf_get_state, __mf_set_state): Likewise.
	* mf-runtime.c (__mf_state_1): Likewise.